@@ -1,0 +1,6 @@
+
+.invoices--list
+  %ul
+    - invoices.each do |i|
+      %li
+        = i.inspect
