@@ -1,0 +1,20 @@
+
+.invoices--index-table
+  %table.bordered.data-table
+    %thead
+      %tr
+        %th
+        %th Email
+        %th Number
+        %th Amount
+        %th Amount Paid
+        %th Created At
+    %tbody
+      - invoices.each do |i|
+        %tr
+          %td= link_to "View", invoice_path( i )
+          %td= i.email
+          %td= i.number
+          %td= i.amount_cents
+          %td= i.paid_amount_cents
+          %td= i.created_at.to_s[0..10]
