@@ -9,15 +9,7 @@
     %li <b>Email:</b> #{@leadset.email}
     %li <b>company_url</b>: #{@leadset.company_url}
     %li <b>customer_id</b>: #{@leadset.customer_id}
-    %li
-      = link_to invoices_path({ leadset_id: @leadset.id }) do
-        Invoices
-        (#{@leadset.invoices.length})
-      = link_to '[+stripe]', new_invoice_stripe_path({ leadset_id: @leadset.id })
-      = link_to '[+pdf]', new_invoice_pdf_path({ leadset_id: @leadset.id })
-    %li
-      Subscriptions (#{@leadset.subscriptions.length})
-      = link_to '[+wco]', new_wco_subscription_path({ customer_id: @leadset.customer_id })
+
 
   %h5.collapse-expand#leads Leads
   = render 'ish_manager/leads/index', leads: @employees
@@ -32,15 +24,23 @@
 
   .row
     .col-md-6
-      &nbsp;
+      %h5.collapse-expand#invoicesList
+        Invoices  (#{@leadset.invoices.length})
+        = link_to '[+stripe]', new_invoice_stripe_path({ leadset_id: @leadset.id })
+        = link_to '[+pdf]', new_invoice_pdf_path({ leadset_id: @leadset.id })
+      = render 'ish_manager/invoices/index_list', invoices: @invoices
+      %hr
+
     .col-md-6
-      %h5 Subscriptions
-      %table
+      %h5.collapse-expand#subscriptionsList
+        Subscriptions (#{@subscriptions.length})
+        = link_to '[+wco]', new_wco_subscription_path({ customer_id: @leadset.customer_id })
+      %table.bordered
         %thead
           %tr
             %th Name
             %th Price
-        - @leadset.subscriptions.each do |i|
+        - @subscriptions.each do |i|
           %tr
             %td= i.product.name
             %td= i.price
