@@ -32,5 +32,6 @@ Gem::Specification.new do |s|
   s.add_runtime_dependency 'uglifier'
   s.add_runtime_dependency 'business_time', '~> 0.13.0'
   s.add_runtime_dependency 'prawn', '~> 2.4.0'
+  s.add_runtime_dependency 'prawn-table', '~> 0.2.1'
 
 end
